# libzip

lib/: zip.h  zipint.h
lua-zip/: lua_zip.c
tools/: Android.mk  CMakeLists.txt  build_all.sh  build_android.sh  build_ios.sh  build_mac.sh  build_win.bat
win32/: config.h
